--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "window",
-  "version": "1.0.0",
+  "name": "udemy_project_windows",
+  "version": "2.0.0",
   "description": "",
-  "main": "index.js",
+  "homepage": "https://evgenija-p.github.io/udemy_project_windows/",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel src/*.html",
+    "build": "parcel build src/*.html --public-url /udemy_project_windows/"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+  },
+  "keywords": [],
+  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
-  "browserslist": [
-    "> 1%",
-    "not dead"
-  ],
+  "bugs": {
+    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+  },
+  "dependencies": {
+    "jquery": "^3.6.1",
+    "modern-normalize": "^1.1.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "browser-sync": "^2.26.7",
-    "core-js": "^3.4.2",
-    "gulp": "^4.0.2",
-    "webpack": "^4.41.2",
-    "webpack-stream": "^5.2.1"
-  }
+    "@parcel/transformer-sass": "^2.6.0",
+    "parcel": "^2.6.0",
+    "parcel-reporter-clean-dist": "^1.0.4",
+    "posthtml-include": "^1.7.4"
+  },
+  "browserslist": "> 0.5%, last 2 versions, not dead"
 }
